@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST greputils-2.8.tar.bz2 11886 SHA256 9238d08d4a95355ce87b78d2da58af1fe95190ec7c5c08330612ad02f00f82f2 SHA512 07a7b22a900860b982bb0596232892ad056472fa48447131ba56083caef00318886719f379c9f9296fc00fd54575ab16aae71b3d1adf2af5d05a11a45a2bd7f9 WHIRLPOOL 5a7369deb0c6e751ed9a967b79bc45cdcb772eb959dd5034acc26685ff86f2cfe04bf11775390d35f6945b000ab5a7d2c5468b63c6589002890c04b3b3a7fa85
-EBUILD greputils-2.8.ebuild 574 SHA256 1e8d097cac2bd333f815ac3c6982e8284a44a7964d641e8f566f99def1cca8de SHA512 c4a66ff32c24ab5b962f513462c3cca95c112d8002e6e2044a602aa582c7af051cc9926c2fb4234899ffd6acaf603292db28ae13121691719c6be36cb8dd194c WHIRLPOOL 599dd56364d8368dbf66db7ee74a8dbfed3ff196d732286677f44b1f5859ed9c582d5c718268e9787d1acd5be21653133cf54b503fa27af4213f7e523177d7e3
-MISC ChangeLog 2010 SHA256 1520fa6f64ec487f06e976a6457971e1d8722199615ca03088b0f36294da6c0f SHA512 6e30e203eae0aca6e49a2ee623bfa557df0125a698acda702189011500a3f08395c7a253ac73b9b34c8a213b14796adad2d6564409c3b1609ba47af9db7478bd WHIRLPOOL 8504dc64d92118f5b597a6b148365d4836c75f3d16ba4a42179fb8aefd860ac5c36041a8594df21b8fed324db7516d1aff74da23ecf051723c3d7c2390c0b53d
+EBUILD greputils-2.8.ebuild 577 SHA256 f9df04b4ef6e9a17eded3b860e0b7eeb64a855655d3909c897956b05d6ff0b01 SHA512 e4b11f300114771ee9e6fd8eee7089af3de55c8c8580fa0f200e6b0afb40e165c74ad4510c7f536a77dc2a6a9952885d146a15a160a446866463f2137748578e WHIRLPOOL 19d2ebf8ce04958ea965fb2eaeffcaebc2909a8fa528799c8f048c07fa57383fd47de208b63021ac2559589e0cceea85a7e262de5e221861a9658149c1bd2ebd
+MISC ChangeLog 2179 SHA256 7a8596d4b9eb73c1470e02e73f7dbe4d111ec00a91e036135185779499c3b3ef SHA512 359e6531853145d19e3a57bf416e5c3b58d5d45ad8dbf8a618c4a26a51ef3ea62b4162bf233050ca3da675e372b817811db4101408ee2a28c0482c812e754d44 WHIRLPOOL f10d611d54edf840272ab4c3369184e9b9e4a86c17e7f7394b6655cddf5e1463bdfec8a11bd66cd6c3b6200ec9f13fe97e78df0f5f646b43025ace6de54408e4
 MISC metadata.xml 157 SHA256 106c8618581360c66c2b535fcb7a6cb9ff318f1bd8e6c8f40f2f2f2d54e6787a SHA512 3b60e5c539f0940f297c22ce014cbecfbe31a7321c59384d9f1e8ee929b9685793b7231f49b2a153ddd1b89e3e5a56e5a304e11f321b28147ae47309a3272d70 WHIRLPOOL 22e97df7eb8669d9899254e880755052a8ef06dab300794173011b031a34c438bfc9de390e2a3bd2630927245c1055e789dd113078c2c6bafa7d4f723638a9d7
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iEYEAREIAAYFAlJ4+I0ACgkQp5vW4rUFj5rQJQCgqEe3Ygo5rpzbq0X+WQHONHDY
+8P4An3FF4GP71e7RCZFNYNwxYE2t26JJ
+=YLxG
+-----END PGP SIGNATURE-----
