@@ -1,13 +1,13 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/greputils/greputils-2.8.ebuild,v 1.7 2010/10/07 03:18:28 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/greputils/greputils-2.8.ebuild,v 1.8 2013/11/05 13:54:24 chainsaw Exp $
 
 inherit vim-plugin
 
 DESCRIPTION="vim plugin: interface with grep, find and id-utils"
 HOMEPAGE="http://www.vim.org/scripts/script.php?script_id=1062"
 LICENSE="GPL-2"
-KEYWORDS="alpha ~amd64 ia64 ~mips ppc sparc x86"
+KEYWORDS="alpha amd64 ia64 ~mips ppc sparc x86"
 IUSE=""
 
 VIM_PLUGIN_HELPURI="${HOMEPAGE}"
